--- a/templates/header.phtml
+++ b/templates/header.phtml
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500&display=swap" rel="stylesheet">
-    <title>Artistas</title>
+    <title>Tienda Tandil</title>
     <base href=<?php echo BASE_URL; ?>>
 </head>
 
