--- a/templates/login.phtml
+++ b/templates/login.phtml
@@ -9,7 +9,7 @@
             </div>
             <div class="form-group">
 
-                <label for="">Contraseña</label>
+                <label for="password">Contraseña</label>
                 <input type="password" name="password">
             </div>
 
