--- a/templates/categoriaAgregar.phtml
+++ b/templates/categoriaAgregar.phtml
@@ -1,24 +1,24 @@
-<div class='contenedor-artist-control'>
+<div class='contenedor-categoria-control'>
 
     <div style="padding-right: 100px;">
         <p style="font-size: 3em;">Control Panel</p>
 
     </div>
     <div style="padding-left: 100px;">
-        <p style="font-size: 3em;">Agregar artista</p>
+        <p style="font-size: 3em;">Agregar categoria</p>
 
-        <form id="" action='addArtista' method="post">
+        <form id="" action='addCategoria' method="post">
 
-            <label for=''>Nombre artístico</label>
-            <input type='text' name='artist-name'>
+            <label for=''>Nombre de la categoria</label>
+            <input type='text' name='categoria-name'>
 
             <label for=''>Descripcion</label>
-            <textarea name='artist-desc' id='' cols='30' rows='10'></textarea>
+            <textarea name='categoria-desc' id='' cols='30' rows='10'></textarea>
 
             <label for=''>Oferta</label>
             <select name="oferta" id="">
-                <option value="">Si</option>
-                <option value="">No</option>
+                <option value="1">Si</option>
+                <option value="0">No</option>
             </select>
 
             <button type='submit'>Agregar</button>
