--- a/templates/categoriaEditar.phtml
+++ b/templates/categoriaEditar.phtml
@@ -1,25 +1,25 @@
-<div class='contenedor-artist-control'>
+<div class='contenedor-categoria-control'>
 
     <div style="padding-right: 100px;">
         <p style="font-size: 3em;">Control Panel</p>
 
     </div>
     <div style="padding-left: 100px;">
-        <p style="font-size: 3em;">Editar artista</p>
+        <p style="font-size: 3em;">Editar categoria</p>
 
-        <form id="" action='editArtista/<?= $artista->id ?>' method='post'>
+        <form id="" action='editCategoria/<?= $categoria->id_categoria ?>' method='post'>
 
 
-            <label for=''>Nombre artístico</label>
-            <input type='text' name='artist-name'>
+            <label for=''>Nombre de la categoria</label>
+            <input type='text' name='categoria-name'>
 
             <label for=''>Descripcion</label>
-            <textarea name='artist-desc' id='' cols='30' rows='10'></textarea>
+            <textarea name='categoria-desc' id='' cols='30' rows='10'></textarea>
 
             <label for=''>Oferta</label>
             <select name="oferta" id="">
-                <option value="">Si</option>
-                <option value="">No</option>
+                <option value="1">Si</option>
+                <option value="0">No</option>
             </select>
 
             <button type='submit'>Editar</button>
