--- a/templates/categoriaInfo.phtml
+++ b/templates/categoriaInfo.phtml
@@ -2,13 +2,13 @@
 
 <div class='contenedorCategoria'>
     <div class='categoria-nom'>
-        <h2>Artista</h2>
-        <h3><?= $artista->nombre_artista ?></h3>
+        <h2>Categoria</h2>
+        <h3><?= $categoria->nombre ?></h3>
     </div>
     <div class='contenedorDesc'>
         <div class='categoria-desc'>
             <h2>Descripcion</h2>
-            <p><?= $artista->descripcion ?></p>
+            <p><?= $categoria->descripcion ?></p>
         </div>
     </div>
 
